    - added GALLERY_DISABLE_EXIF_WARNINGS
    - gallery templates: refactoring of gallery mosaic display (use
      display-block instead of tables): introduced new mosaic_* classes.
    - gallery templates: support for smartphones (two columns, fixed to
      50% width) and tablets (resized images, maximum height of 120px)
    - gallery templates: added mobile_view variable

* filewiki-0.50
  - added FileWiki::Plugin::Man, which processes man pages
  - added EXCLUDE system variable
  - added RESOURCES_FORCE_REBUILD system variable
  - changed default PLUGIN_MARKDOWN_MATCH=\.(md|txt)$
  - allow array vars for INCLUDE, EXCLUDE and PLUGIN variables (e.g. +INCLUDE=foo)
  - added SORT_STRATEGY=none (no sorting, useful when using INCLUDE)
  - added Template::Plugin::SwissTopo (swiss map plugin for Template Toolkit)
  - added support for blueimp gallery slideshow scripts (alternative to galleria)
  - added option "slideshow" for gallery_image_link variable
  - added variable gallery_popout, which displays a popout action link if set
  - added support for multiline variables (starting/ending with '\\\')
  - added resource-creator plugin framework
  - added plugin groups and constructor arguments
  - added FileWiki::Plugin::ImageMagick, which uses the PerlMagick API
    for creating image resources
  - added FileWiki::Plugin::ExtCmd, which calls a user-defined command
    for creating page resources
  - added FileWiki::Plugin::EXIF, providing EXIF information in vars
  - removed FileWiki::Plugin::Gallery, which is no longer required as
    the same functionality is provided by the more generic
    ImageMagick, ExtCmd, and EXIF plugins, in combination with plugin
    grouping

* filewiki-current
  - added SRC_REGEXP system variable
  - create reproducible output (always order hashes in templates)
  - use "grohtml" for man page conversion (in FileWiki::Plugin::Man)
  - produce "name.1.html" instead of "name.html" (FileWiki::Plugin::Man)